# ugbio-utils

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Cargo.toml  DATA-9903-docker-cve-remediation-summary.md  Dockerfile  README.md  README_smoothing_utils.md  copilot-instructions.md  fix_banner_cell.py  interval_vcf_files.list  jump_align  onlink_test.py  para_jalign  pyproject.toml  sfm_classifier_perf_analysis_0b78350d.plan.md  test_100syn_test_100syn.mrd_analysis_report.html  test_100syn_test_100syn.mrd_qc_report.html  test_20syn.mrd_analysis_report.html  test_20syn.mrd_qc_report.html  test_report.mrd_analysis_report.html  test_report.mrd_qc_report.html
src/: main.rs  (+1 more)
src/cloud_utils/: Dockerfile  README.cloud.md  pyproject.toml
src/cloud_utils/ugbio_cloud_utils/: cloud_sync.py  cram_handler_s3.py  file_handler_s3.py
src/cnv/: DATA-9903-jalign-bookworm-migration.md  Dockerfile  README.cnv.md  germline_cnv_calling.md  pyproject.toml
src/cnv/cnmops/: cnv_calling_using_cnmops.R  convert_bedGraph_to_Granges.R  create_reads_count_cohort_matrix.R  export_cohort_matrix_to_bed.R  merge_reads_count_sample_to_cohort.R  normalize_reads_count.R  rebin_cohort_reads_count.R
src/cnv/tests/: test_annotate_FREEC_segments.py  test_bicseq2_post_processing.py  test_convert_cnv_results_to_vcf.py  test_filter_sample_cnvs.py  test_plot_FREEC_fold_change.py  test_plot_cnv_results.py  test_plot_neutral_AF.py
src/cnv/ugbio_cnv/: add_cipos.py  analyze_cnv_breakpoint_reads.py  annotate_FREEC_segments.py  bicseq2_post_processing.py  breakpoint_refinement.py  cnmops_utils.py  cnv_bed_format_utils.py  cnv_consts.py  cnv_vcf_consts.py  combine_cnmops_cnvpytor_cnv_calls.py  combine_cnv_vcf_utils.py  convert_cnn_results_to_vcf.py  convert_cnv_results_to_vcf.py  convert_combined_cnv_results_to_output_formats.py  convert_combined_cnv_results_to_vcf.py  filter_sample_cnvs.py  jalign.py  lpa_caller.py  merge_cnv_sv.py  merge_cnv_vcf_utils.py  pileuptofreq.py  plot_FREEC_fold_change.py  plot_FREEC_neutral_AF.py  plot_cnv_results.py  process_cnmops_cnvs.py  process_cnvs.py  reformat_parascopy_bed.py  run_cnvpytor.py  run_jalign.py
src/comparison/: Dockerfile  README.comparison.md  pyproject.toml
src/comparison/ugbio_comparison/: comparison_pipeline.py  comparison_utils.py  run_comparison_pipeline.py  sv_comparison_pipeline.py  vcf_comparison_utils.py  vcf_pipeline_utils.py
src/consensus/: Dockerfile  README.consensus.md  pyproject.toml
src/consensus/ugbio_consensus/: consensus_log.py  consensus_report.py  duplex_metrics.py  on_target.py
src/core/: Dockerfile  README.core.md  pileup_utils.py  pyproject.toml
src/core/tests/: test_array_utils.py  test_db_access.py  test_dna_sequence_utils.py  test_pileuptofreq.py  test_trimmer_utils.py
src/core/ugbio_core/: annotate_contig.py  array_utils.py  bam_utils.py  bed_utils.py  bed_writer.py  calculate_library_complexity.py  collect_existing_metrics.py  consts.py  convert_h5_to_json.py  coverage_analysis.py  coverage_analysis_utils.py  cram_utils.py  dna_sequence_utils.py  exec_utils.py  filter_bed.py  gather_statistics.py  h5_utils.py  intersect_bed_regions.py  logger.py  math_utils.py  merge_sorter_json_files.py  misc_utils.py  picard_metrics_utils.py  pileup_utils.py  pileuptofreq.py  plotting_utils.py  report_utils.py  sorter_multi_sample_report.py  sorter_sample_discovery.py  sorter_stats_report.py  sorter_stats_to_mean_coverage.py  sorter_to_h5.py  sorter_utils.py  stats_utils.py  test_utils.py  trimmer_utils.py  variant_annotation.py  vcf_pipeline_utils.py  vcf_utils.py
src/db/: Dockerfile  README.db.md  pyproject.toml
src/db/tests/: test_db_access.py
src/featuremap/: Dockerfile  README.featuremap.md  pyproject.toml
src/featuremap/notebooks/: sfm_classifier_benchmark.ipynb
src/featuremap/tests/: conftest.py  test_create_hom_snv_featuremap.py  test_featuremap_consensus_utils.py
src/featuremap/ugbio_featuremap/: FLOW_DIAGRAM.md  OPTIMIZATION_PLAN.md  VCF_TRANSFORMATIONS.md  aggregate_lists.awk  annotate_featuremap.py  convert_mpileup_to_ref_nonref_counts.py  create_hom_snv_featuremap.py  create_somatic_featuremap.py  create_somatic_pileup_featuremap.py  explode_lists.awk  featuremap_consensus_utils.py  featuremap_fields_aggregation.py  featuremap_to_dataframe.py  featuremap_utils.py  featuremap_xgb_prediction.py  featuremap_xgb_training.py  filter_dataframe.py  integrate_mpileup_to_sfm.py  integrate_mpileup_to_sfmp.py  merge_snvfind_stats.py  mpileup_info_integration_to_merged_vcf.py  pileup_featuremap.py  prepare_annotation_vcfs.py  ref_nonref_per_base_window.py  somatic_featuremap_classifier.py  somatic_featuremap_fields_transformation.py  somatic_featuremap_inference_utils.py  somatic_featuremap_utils.py  somatic_pileup_featuremap_inference.py  somatic_pileup_featuremap_inference_utils.py  somatic_snvfind_classifier.py  (+1 more)
src/filtering/: Dockerfile  README.filtering.md  pyproject.toml
src/freec/: Dockerfile  Dockerfile.org  README.freec.md  pyproject.toml
src/hail/: EMR_deploy_and_install_spot.py  README.md  add_step.sh  bootstrap_python36.sh  combine_gvcfs.py  config_EMR_spot.yaml  hail_build.sh  hail_install.sh  install_python36.sh  jupyter_notebook_config.py  jupyter_run.sh  pyproject.toml  run.sh  run_combine_gvcfs_step.sh  setup.sh
src/hla_la/: Dockerfile  README.hla_la.md  pyproject.toml
src/methylation/: Dockerfile  README.methylation.md  pyproject.toml
src/mongo/: Dockerfile  README.mongo.md  pyproject.toml
src/mrd/: Dockerfile  README.mrd.md  generate_sample_reports.py  pyproject.toml
src/olink/: Dockerfile  pyproject.toml
src/omics/: Dockerfile  README.omics.md  pyproject.toml
src/ppmseq/: Dockerfile  README.ppmseq.md  pyproject.toml
src/seq_qc/: Dockerfile  README.seq_qc.md  pyproject.toml
src/single_cell/: Dockerfile  README.single_cell.md  pyproject.toml
src/srsnv/: Dockerfile  README.srsnv.md  README_smoothing_utils.md  pyproject.toml
src/vcfbed/: Dockerfile  README.vcfbed.md  pyproject.toml
src/vcflite/: Cargo.toml  Dockerfile  LICENSE.txt  README.md
(+1060 files in other folders)
