[project]
name = "ugbio_utils"
version = "1.21.0"
description = "Ultima Genomics bioinfo utils"
authors = [
    { name = "Avigail Moldovam ", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.license]
text = "Apache-2.0"

[dependency-groups]
dev = [
    "dnspython>=2.7.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "marimo>=0.19.4",
    "matplotlib-venn>=1.1.1",
    "mock>=5.1.0",
    "openpyxl>=3.1.5",
    "polars>=1.29.0",
    { include-group = "pre-commit-group" },
    "pyarrow>=17.0.0",
    "pybedtools>=0.11.0",
    "pymongo>=4.11.1",
    "pytest>=8.3.3",
    "pytest-cov",
    "sigprofilerassignment>=0.0.29",
    "sigprofilermatrixgenerator>=1.2.14",
    "sigprofilerplotting>=1.3.12",
    "wdl>=1.0.22",
]
pre-commit-group = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]

[tool.uv]
default-groups = [
    "dev",
]

[tool.uv.workspace]
members = [
    "src/*",
]
exclude = [
    "src/_*",
    "src/.*",
]
