[project]
name = "ugbio_cnv"
version = "1.8.0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core",
    "seaborn>=0.13.2",
    "cnvpytor==1.3.1",
    "setuptools>=75.8.0",
]
description = "Ultima Genomics CNV utils"
authors = [
    { name = "Tammy Biniashvili", email = "tammy.biniashvili@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
    { name = "Tammy Biniashvili", email = "tammy.biniashvili@ultimagen.com" },
]
readme = "README.cnv.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
filter_sample_cnvs = "ugbio_cnv.filter_sample_cnvs:main"
convert_cnv_results_to_vcf = "ugbio_cnv.convert_cnv_results_to_vcf:main"
plot_cnv_results = "ugbio_cnv.plot_cnv_results:main"
bicseq2_post_processing = "ugbio_cnv.bicseq2_post_processing:main"
annotate_FREEC_segments = "ugbio_cnv.annotate_FREEC_segments:main"
plot_FREEC_neutral_AF = "ugbio_cnv.plot_FREEC_neutral_AF:main"
run_cnvpytor = "ugbio_cnv.run_cnvpytor:main"
combine_cnmops_cnvpytor_cnv_calls = "ugbio_cnv.combine_cnmops_cnvpytor_cnv_calls:main"
convert_combined_cnv_results_to_vcf = "ugbio_cnv.convert_combined_cnv_results_to_vcf:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools]
packages = [
    "ugbio_cnv",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
