[project]
name = "ugbio_cnv"
version = "1.20.0-0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[vcfbed]",
    "seaborn>=0.13.2,<1.0.0",
    "cnvpytor==1.3.1",
    "setuptools>=75.8.0",
]
description = "Ultima Genomics CNV utils"
authors = [
    { name = "Tammy Biniashvili", email = "tammy.biniashvili@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
    { name = "Tammy Biniashvili", email = "tammy.biniashvili@ultimagen.com" },
]
readme = "README.cnv.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
process_cnvs = "ugbio_cnv.process_cnvs:main"
plot_cnv_results = "ugbio_cnv.plot_cnv_results:main"
bicseq2_post_processing = "ugbio_cnv.bicseq2_post_processing:main"
annotate_FREEC_segments = "ugbio_cnv.annotate_FREEC_segments:main"
plot_FREEC_neutral_AF = "ugbio_cnv.plot_FREEC_neutral_AF:main"
run_cnvpytor = "ugbio_cnv.run_cnvpytor:main"
combine_cnmops_cnvpytor_cnv_calls = "ugbio_cnv.combine_cnmops_cnvpytor_cnv_calls:main"
combine_cnv_vcfs = "ugbio_cnv.combine_cnmops_cnvpytor_cnv_calls:main_concat"
filter_dup_cnmmops_cnv_calls = "ugbio_cnv.combine_cnmops_cnvpytor_cnv_calls:main_filter_dup_cnmmops"
annotate_vcf_with_regions = "ugbio_cnv.combine_cnmops_cnvpytor_cnv_calls:main_annotate_regions"
filter_sample_cnvs = "ugbio_cnv.filter_sample_cnvs:main"
analyze_cnv_breakpoint_reads = "ugbio_cnv.analyze_cnv_breakpoint_reads:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools]
packages = [
    "ugbio_cnv",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
