[project]
name = "ugbio_comparison"
version = "1.21.5-0"
description = "Ultima Genomics comparison scripts"
authors = [
    { name = "Ilya Soifer", email = "ilya.soifer@ultimagen.com" },
    { name = "Doron Shem-Tov", email = "doron.shemtov@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
dependencies = [
    "ugbio_core[ml,vcfbed]",
]
requires-python = ">=3.11"
readme = "README.comparison.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
run_comparison_pipeline = "ugbio_comparison.run_comparison_pipeline:main"
sv_comparison_pipeline = "ugbio_comparison.sv_comparison_pipeline:main"

[tool.uv.sources.ugbio_core]
workspace = true

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
