[project]
name = "ugbio_core"
version = "1.3.2"
requires-python = ">=3.11"
description = "Ultima Genomics core bioinfo utils"
authors = [
    { name = "Avigail Moldovam ", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.core.md"
dependencies = [
    "simppl>=1.0.7",
    "pandas[hdf5]>=2.2.2",
    "numpy>=1.26.4,<2.0.0",
    "pysam>=0.22.1",
    "matplotlib>=3.7.1",
    "pyfaidx>=0.8.1",
    "h5py>=3.11.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
variantannotation = [
    "pybigwig>=0.3.18",
    "tqdm>=4.66.4",
    "bgzip>=0.5.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
annotate_contig = "ugbio_core.annotate_contig:main"
intersect_bed_regions = "ugbio_core.intersect_bed_regions:main"
sorter_stats_to_mean_coverage = "ugbio_core.sorter_stats_to_mean_coverage:main"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
