[project]
name = "ugbio_core"
version = "1.8.0"
requires-python = ">=3.11"
description = "Ultima Genomics core bioinfo utils"
authors = [
    { name = "Avigail Moldovam ", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.core.md"
dependencies = [
    "simppl>=1.0.7",
    "pandas[hdf5]>=2.2.2",
    "numpy>=1.26.4,<2.0.0",
    "pysam>=0.22.1",
    "matplotlib>=3.7.1",
    "pyfaidx>=0.8.1",
    "h5py>=3.11.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
vcfbed = [
    "pybigwig>=0.3.18",
    "tqdm>=4.66.4",
    "bgzip>=0.5.0",
]
reports = [
    "papermill>=2.6.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.5",
]
concordance = [
    "scikit-learn>=1.5.2,<1.6.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
annotate_contig = "ugbio_core.vcfbed.annotate_contig:main"
intersect_bed_regions = "ugbio_core.intersect_bed_regions:main"
sorter_stats_to_mean_coverage = "ugbio_core.sorter_stats_to_mean_coverage:main"
sorter_to_h5 = "ugbio_core.sorter_to_h5:main"
convert_h5_to_json = "ugbio_core.convert_h5_to_json:main"
collect_existing_metrics = "ugbio_core.collect_existing_metrics:main"
generate_report = "ugbio_core.reports.report_utils:main"

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
