[project]
name = "ugbio_core"
version = "1.19.0-0"
requires-python = ">=3.11"
description = "Ultima Genomics core bioinfo utils"
authors = [
    { name = "Avigail Moldovam ", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.core.md"
dependencies = [
    "simppl>=1.0.7,<2.0.0",
    "pandas[hdf5]>=2.2.2,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "pysam>=0.22.1,<1.0.0",
    "matplotlib>=3.7.1,<4.0.0",
    "pyfaidx>=0.8.1,<1.0.0",
    "h5py>=3.11.0,<4.0.0",
    "scipy>=1.14.0,<2.0.0",
]

[project.optional-dependencies]
vcfbed = [
    "pybigwig>=0.3.18,<0.4.0",
    "tqdm>=4.66.4,<5.0.0",
    "bgzip>=0.5.0,<0.6.0",
    "intervaltree<=3.1.0",
    "truvari>=5.4.0,<6.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
]
reports = [
    "papermill>=2.6.0,<3.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "nbconvert>=7.16.5,<8.0.0",
    "seaborn>=0.13.2,<1.0.0",
]
ml = [
    "scikit-learn>=1.5.2,<1.6.0",
    "xgboost==2.1.2",
    "joblib>=1.4.2,<2.0.0",
]
parquet = [
    "pyarrow>=17.0.0,<18.0.0",
    "fastparquet>=2024.5.0,<2025.0.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
annotate_contig = "ugbio_core.vcfbed.annotate_contig:main"
intersect_bed_regions = "ugbio_core.intersect_bed_regions:main"
sorter_stats_to_mean_coverage = "ugbio_core.sorter_stats_to_mean_coverage:main"
sorter_to_h5 = "ugbio_core.sorter_to_h5:main"
convert_h5_to_json = "ugbio_core.convert_h5_to_json:main"
collect_existing_metrics = "ugbio_core.collect_existing_metrics:main"
generate_report = "ugbio_core.reports.report_utils:main"

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
