[project]
name = "ugbio_featuremap"
version = "1.21.0-0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[vcfbed,ml]",
    "ugbio_ppmseq",
    "polars>=1.27.1",
]
description = "Ultima Genomics FeatureMap utils"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.featuremap.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
featuremap_to_dataframe = "ugbio_featuremap.featuremap_to_dataframe:main"
filter_featuremap = "ugbio_featuremap.filter_dataframe:main"
add_aggregate_params_and_xgb_score_to_pileup_featuremap = "ugbio_featuremap.featuremap_xgb_prediction:main"
create_somatic_featuremap = "ugbio_featuremap.create_somatic_featuremap:main"
integrate_mpileup_to_sfm = "ugbio_featuremap.integrate_mpileup_to_sfm:main"
somatic_featuremap_fields_transformation = "ugbio_featuremap.somatic_featuremap_fields_transformation:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.uv.sources.ugbio_ppmseq]
workspace = true

[tool.setuptools.package-data]
ugbio_featuremap = [
    "*.awk",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
