[project]
name = "ugbio_freec"
version = "1.20.0"
description = "Ultima Genomics FREEC"
authors = [
    { name = "Tammy Biniashvili", email = "tammy.biniashvili@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
dependencies = [
    "pandas>=2.2.2,<3.0.0",
    "pyfaidx>=0.8.1,<1.0.0",
]
requires-python = ">=3.11"
readme = "README.freec.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
generate_controlFREEC_config = "ugbio_freec.generate_control_freec_config:main"
bigwig_to_bedGraph = "ugbio_freec.bigwig_to_bedgraph:main"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
