[project]
name = "hail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.71",
    "botocore>=1.35.71",
    "nose>=1.3.7",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "pyyaml>=6.0.2",
    "tornado>=6.4.1",
]
