[project]
name = "ugbio_hla_la"
version = "1.6.2-0dev-106"
description = "Ultima Genomics HLA-LA"
authors = [
    { name = "Maya Levy", email = "maya.levy@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.hla_la.md"

[project.license]
text = "Apache-2.0"
