[project]
name = "ugbio_hla_la"
version = "1.10.2-0"
description = "Ultima Genomics HLA-LA"
authors = [
    { name = "Maya Levy", email = "maya.levy@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.hla_la.md"

[project.license]
text = "Apache-2.0"
