[project]
name = "ugbio_methylation"
version = "1.21.1"
description = "Ultima Genomics methylation bioinfo utils"
authors = [
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
dependencies = [
    "ugbio_core[reports]",
]
readme = "README.methylation.md"
requires-python = ">=3.11"

[project.scripts]
run_tests = "pytest:main"
process_Mbias = "ugbio_methylation.process_mbias:run"
process_mergeContext = "ugbio_methylation.process_merge_context:run"
process_mergeContextNoCpG = "ugbio_methylation.process_merge_context_no_cp_g:run"
process_perRead = "ugbio_methylation.process_per_read:run"
generate_report = "ugbio_methylation.generate_methylation_report:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
