[project]
name = "ugbio_mongo"
version = "1.3.4-0dev-58"
description = "Ultima Genomics bioinfo utils for working with mongodb"
authors = [
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
dependencies = [
    "boto3>=1.34.136",
    "pymongo>=4.8.0",
]
readme = "README.mongo.md"
requires-python = ">= 3.11"

[project.scripts]
run_tests = "pytest:main"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
