[project]
name = "ugbio_mrd"
version = "1.3.2"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[variantannotation]",
    "ugbio_ppmseq",
    "ugbio_featuremap",
]
description = "Ultima Genomics MRD utils"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.mrd.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
generate_synthetic_signatures = "ugbio_mrd.generate_synthetic_signatures:main"
intersect_featuremap_with_signature = "ugbio_mrd.intersect_featuremap_with_signature:main"
prepare_data_from_mrd_pipeline = "ugbio_mrd.prepare_data_from_mrd_pipeline:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv.sources.ugbio_core]
workspace = true

[tool.uv.sources.ugbio_ppmseq]
workspace = true

[tool.uv.sources.ugbio_featuremap]
workspace = true

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
