[project]
name = "ugbio_mrd"
version = "1.21.0-0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[vcfbed,reports]",
    "ugbio_ppmseq",
    "ugbio_featuremap",
]
description = "Ultima Genomics MRD utils"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.mrd.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
generate_synthetic_signatures = "ugbio_mrd.generate_synthetic_signatures:main"
generate_report = "ugbio_mrd.generate_mrd_report:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.uv.sources.ugbio_ppmseq]
workspace = true

[tool.uv.sources.ugbio_featuremap]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
