[project]
name = "ugbio_olink_test"
version = "0.1.0"
description = "yoav's olink tests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.39",
    "fuzzysearch>=0.7.3",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
]

 [build-system]
 requires = [
     "setuptools>=61.0",
 ]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
 run_tests = "pytest:main"
 olink_test = "ugbio_olink_test.olink_test:main"
 