[project]
name = "ugbio_omics"
version = "1.1.1-0dev-31"
description = "Ultima Genomics bioinfo utils for working iwth AWS Health-Omics"
authors = [
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
]
dependencies = [
    "amazon-omics-tools>=0.5.0",
    "plotly>=5.23.0",
    "google-cloud-storage>=2.18.2",
]
readme = "README.omics.md"
requires-python = ">= 3.11"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"