[project]
name = "ugbio_omics"
version = "1.8.0"
description = "Ultima Genomics bioinfo utils for working with AWS Health-Omics"
authors = [
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
]
dependencies = [
    "plotly>=5.23.0",
    "google-cloud-storage>=2.18.2",
    "boto3>=1.35.69",
    "pandas>=2.2.3",
]
readme = "README.omics.md"
requires-python = ">= 3.11"

[project.optional-dependencies]
db = [
    "pandas[hdf5]>=2.2.2",
    "pymongo>=4.11.1",
]

[project.scripts]
run_tests = "pytest:main"
compare_cromwell_omics = "ugbio_omics.compare_cromwell_omics:main"
compare_omics_runs = "ugbio_omics.compare_omics_runs:main"
get_omics_logs = "ugbio_omics.get_omics_log:main"
manifest_log = "ugbio_omics.parse_manifest_log:main"
performance = "ugbio_omics.get_performance:main"
report_run_completion = "ugbio_omics.report_run_completion:main"
omics_cache_path = "ugbio_omics.omics_cache_path:main"

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
