[project]
name = "ugbio_ppmseq"
version = "1.19.0-0"
requires-python = ">=3.11"
dependencies = [
    "ugbio_core[vcfbed,reports,parquet]",
]
description = "Ultima Genomics ppmSeq utils"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
    { name = "Gat Krieger", email = "gat.krieger@ultimagen.com" },
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
    { name = "Avigail Moldovan", email = "avigail.moldovan@ultimagen.com" },
]
readme = "README.ppmseq.md"

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
ppmSeq_qc_analysis = "ugbio_ppmseq.ppmSeq_qc_analysis:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
