[project]
name = "ugbio_seq_qc"
version = "1.27.0"
requires-python = ">=3.11"
description = "Ultima Genomics sequencing QC HTML reports"
authors = [
    { name = "Itai Rusinek", email = "itai.rusinek@ultimagen.com" },
]
readme = "README.seq_qc.md"
dependencies = [
    "ugbio_core",
    "ugbio_cloud_utils",
    "defusedxml>=0.7.1,<1.0.0",
]

[project.license]
text = "Apache-2.0"

[project.scripts]
run_tests = "pytest:main"
seq_qc_report = "ugbio_seq_qc.seq_qc_report:main"
seq_qc_multi_sample_report = "ugbio_seq_qc.seq_qc_multi_sample_report:main"

[tool.uv.sources.ugbio_core]
workspace = true

[tool.uv.sources.ugbio_cloud_utils]
workspace = true

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
