[project]
name = "ugbio_single_cell"
version = "1.3.2"
requires-python = ">= 3.11"
dependencies = [
    "ugbio_core",
    "pandas[hdf5]>=2.2.2",
    "nbformat>=5.10.4",
    "papermill>=2.6.0",
    "nbconvert>=7.16.4",
    "bio>=1.7.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "numpy<2.0.0",
    "ipykernel>=6.29.5",
]
description = "Ultima Genomics Single Cell utils"
authors = [
    { name = "Inbal Zelig", email = "inbal.zelig@ultimagen.com" },
]
readme = "README.single_cell.md"

[project.scripts]
single_cell_qc = "ugbio_single_cell.single_cell_qc_pipeline:main"
run_tests = "pytest:main"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]

[tool.uv.sources.ugbio_core]
workspace = true

[tool.setuptools.package-data]
"*" = [
    "**/reports/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"
